namespaces/live-1.cloud-platform.service.justice.gov.uk/hmpps-submit-information-report-prod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-submit-information-report-prod
  labels:
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "production"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/application: "hmpps-submit-information-report"
    cloud-platform.justice.gov.uk/owner: "Digital Prison Services: dps-hmpps@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-submit-information-report.git"
